tests/expected_failures/missing_parameter_list.stderr
error: `#[gflags(...)]` expects a parameter list
 --> $DIR/missing_parameter_list.rs:5:3
  |
5 | #[gflags]
  |   ^^^^^^
